# Regex

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Regex.c  library.properties
.github/workflows/: cmake-ci.yml
Tests/: BaseTestTemplate.h  CMakeLists.txt  main.c
Tests/Regex/: RegexTest.h
Tests/munit/: example.c  munit.c
include/: Regex.h
